[metadata]
name = oif-merch-game
summary = A FastAPI for tokens for the OpenInfra Merch Game
description_file =
    README.md
author = Canonical
author_email = openstack-charmers@lists.launchpad.net
home_page = https://github.com/wolsen/ois-merch-game
python_requires = >= 3.8
classifier =
    Environment :: OpenStack
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    merch_game

